syntax = "proto3";

option csharp_namespace = "Polcraz.gRPC_Chat.Protos";

package chatroom;

service ChatRoom {
	rpc JoinChat (ChatRequest) returns (stream ChatMessage);
	rpc Send (ChatMessage) returns (ChatRequest);
}

message ChatRequest {

}

message ChatMessage {
	string message = 1;
}